
INCLUDES = -I$(top_srcdir)

LDADD = ../storage/libstorage.la

noinst_PROGRAMS = big1 check1 compare1 compare2 compare3 compare4 compare5	\
	copy1 copy2 test1 test2 valid1

big1_SOURCES = big1.cc

check1_SOURCES = check1.cc

compare1_SOURCES = compare1.cc
compare2_SOURCES = compare2.cc
compare3_SOURCES = compare3.cc
compare4_SOURCES = compare4.cc
compare5_SOURCES = compare5.cc

copy1_SOURCES = copy1.cc
copy2_SOURCES = copy2.cc

test1_SOURCES = test1.cc
test2_SOURCES = test2.cc

valid1_SOURCES = valid1.cc

