#
# Makefile.am for libstorage/examples
#

SUBDIRS = SystemInfo

AM_CPPFLAGS = -I$(top_srcdir)

LDADD = ../storage/libstorage-ng.la

noinst_PROGRAMS = big1 check1 compare compare1 compare2 compare3 compare4	\
	compare5 compare6 copy1 copy2 display find1 load1 probe test1 test2

AM_DEFAULT_SOURCE_EXT = .cc

