#
# Makefile.am for libstorage/storage/Actions
#

noinst_LTLIBRARIES = libactions.la

libactions_la_SOURCES =							\
	Activate.h			Activate.cc			\
	AddToEtcCrypttab.h		AddToEtcCrypttab.cc		\
	AddToEtcFstab.h			AddToEtcFstab.cc		\
	AddToEtcMdadm.h			AddToEtcMdadm.cc		\
	AttachBcacheCset.h 		AttachBcacheCset.cc		\
	Base.h				Base.cc				\
	Create.h			Create.cc			\
	Deactivate.h			Deactivate.cc			\
	Delete.h			Delete.cc			\
	DetachBcacheCset.h		DetachBcacheCset.cc		\
	Modify.h			Modify.cc			\
	Mount.h 			Mount.cc			\
	Reallot.h			Reallot.cc			\
	ReduceMissing.h			ReduceMissing.cc		\
	RemoveFromEtcCrypttab.h		RemoveFromEtcCrypttab.cc	\
	RemoveFromEtcFstab.h		RemoveFromEtcFstab.cc		\
	RemoveFromEtcMdadm.h		RemoveFromEtcMdadm.cc		\
	Rename.h			Rename.cc			\
	RenameIn.h			RenameIn.cc			\
	RenameInEtcCrypttab.h		RenameInEtcCrypttab.cc		\
	RenameInEtcFstab.h		RenameInEtcFstab.cc		\
	Repair.h			Repair.cc			\
	Resize.h			Resize.cc			\
	SetBoot.h 			SetBoot.cc			\
	SetDefaultBtrfsSubvolume.h	SetDefaultBtrfsSubvolume.cc	\
	SetLabel.h			SetLabel.cc			\
	SetLegacyBoot.h			SetLegacyBoot.cc		\
	SetLimits.h			SetLimits.cc			\
	SetNocow.h			SetNocow.cc			\
	SetPmbrBoot.h			SetPmbrBoot.cc			\
	SetQuota.h			SetQuota.cc			\
	SetTuneOptions.h		SetTuneOptions.cc		\
	SetTypeId.h 			SetTypeId.cc			\
	SetUuid.h			SetUuid.cc			\
	Unmount.h 			Unmount.cc			\
	UpdateCacheMode.h		UpdateCacheMode.cc		\
	UpdateInEtcFstab.h		UpdateInEtcFstab.cc
