#
# Makefile.am for libstorage/storage/Actions
#

noinst_LTLIBRARIES = libactions.la

libactions_la_SOURCES =							\
	ActivateImpl.h			ActivateImpl.cc			\
	AddToEtcCrypttabImpl.h		AddToEtcCrypttabImpl.cc		\
	AddToEtcFstabImpl.h		AddToEtcFstabImpl.cc		\
	AddToEtcMdadmImpl.h		AddToEtcMdadmImpl.cc		\
	AddToLvmDevicesFileImpl.h	AddToLvmDevicesFileImpl.cc	\
	AttachBcacheCsetImpl.h 		AttachBcacheCsetImpl.cc		\
	Base.h				Base.cc				\
	BaseImpl.h			BaseImpl.cc			\
	Create.h			Create.cc			\
	CreateImpl.h			CreateImpl.cc			\
	DeactivateImpl.h		DeactivateImpl.cc		\
	Delete.h			Delete.cc			\
	DeleteImpl.h			DeleteImpl.cc			\
	DetachBcacheCsetImpl.h		DetachBcacheCsetImpl.cc		\
	Modify.h			Modify.cc			\
	ModifyImpl.h			ModifyImpl.cc			\
	MountImpl.h 			MountImpl.cc			\
	ReallotImpl.h			ReallotImpl.cc			\
	ReduceMissingImpl.h		ReduceMissingImpl.cc		\
	RemoveFromEtcCrypttabImpl.h	RemoveFromEtcCrypttabImpl.cc	\
	RemoveFromEtcFstabImpl.h	RemoveFromEtcFstabImpl.cc	\
	RemoveFromEtcMdadmImpl.h	RemoveFromEtcMdadmImpl.cc	\
	RemoveFromLvmDevicesFileImpl.h	RemoveFromLvmDevicesFileImpl.cc	\
	RenameImpl.h			RenameImpl.cc			\
	RenameInImpl.h			RenameInImpl.cc			\
	RenameInEtcCrypttabImpl.h	RenameInEtcCrypttabImpl.cc	\
	RenameInEtcFstabImpl.h		RenameInEtcFstabImpl.cc		\
	RepairImpl.h			RepairImpl.cc			\
	ResizeImpl.h			ResizeImpl.cc			\
	SetBootImpl.h 			SetBootImpl.cc			\
	SetDefaultBtrfsSubvolumeImpl.h	SetDefaultBtrfsSubvolumeImpl.cc	\
	SetLabelImpl.h			SetLabelImpl.cc			\
	SetLegacyBootImpl.h		SetLegacyBootImpl.cc		\
	SetLimitsImpl.h			SetLimitsImpl.cc		\
	SetNoAutomountImpl.h		SetNoAutomountImpl.cc		\
	SetNocowImpl.h			SetNocowImpl.cc			\
	SetPmbrBootImpl.h		SetPmbrBootImpl.cc		\
	SetQuotaImpl.h			SetQuotaImpl.cc			\
	SetTuneOptionsImpl.h		SetTuneOptionsImpl.cc		\
	SetTypeIdImpl.h 		SetTypeIdImpl.cc		\
	SetUuidImpl.h			SetUuidImpl.cc			\
	UnmountImpl.h 			UnmountImpl.cc			\
	UpdateCacheModeImpl.h		UpdateCacheModeImpl.cc		\
	UpdateInEtcFstabImpl.h		UpdateInEtcFstabImpl.cc

pkgincludedir = $(includedir)/storage/Actions

pkginclude_HEADERS =			\
	Base.h				\
	Create.h			\
	Delete.h			\
	Modify.h
