#
# Makefile.am for libstorage/storage/CompoundAction
#

noinst_LTLIBRARIES = libcompoundaction.la

libcompoundaction_la_SOURCES =						\
	CompoundAction.h		CompoundAction.cc		\
	CompoundActionImpl.h		CompoundActionImpl.cc		\
	CompoundActionGenerator.h	CompoundActionGenerator.cc	\
	CompoundActionFormater.h	CompoundActionFormater.cc	\
	PartitionFormater.h		PartitionFormater.cc		\
	BtrfsSubvolumeFormater.h	BtrfsSubvolumeFormater.cc	\
	BtrfsFormater.h			BtrfsFormater.cc		\
	NfsFormater.h			NfsFormater.cc

pkgincludedir = $(includedir)/storage/CompoundAction

pkginclude_HEADERS =		\
	CompoundAction.h	\
	CompoundActionGenerator.h
