#
# Makefile.am for libstorage/storage/CompoundAction
#

noinst_LTLIBRARIES = libcompoundaction.la

libcompoundaction_la_SOURCES =						\
	Generator.h			Generator.cc			\
	Formater.h			Formater.cc			\
	Formater/Partition.h		Formater/Partition.cc		\
	Formater/LvmLv.h		Formater/LvmLv.cc		\
	Formater/LvmVg.h		Formater/LvmVg.cc		\
	Formater/BtrfsSubvolume.h	Formater/BtrfsSubvolume.cc	\
	Formater/Btrfs.h		Formater/Btrfs.cc		\
	Formater/Nfs.h			Formater/Nfs.cc

pkgincludedir = $(includedir)/storage/CompoundAction

