#
# Makefile.am for libstorage/storage/CompoundAction
#

noinst_LTLIBRARIES = libcompoundaction.la

libcompoundaction_la_SOURCES =						\
	Generator.h			Generator.cc			\
	Formatter.h			Formatter.cc			\
	Formatter/Partition.h		Formatter/Partition.cc		\
	Formatter/LvmLv.h		Formatter/LvmLv.cc		\
	Formatter/LvmVg.h		Formatter/LvmVg.cc		\
	Formatter/BtrfsSubvolume.h	Formatter/BtrfsSubvolume.cc	\
	Formatter/Btrfs.h		Formatter/Btrfs.cc		\
	Formatter/Nfs.h			Formatter/Nfs.cc

pkgincludedir = $(includedir)/storage/CompoundAction

